// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Html/> should render a html with data 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h1>name is Tom , surname id Sower</h1>",
    }
  }
/>
`;

exports[`<Html/> should render html 1 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h1>test1</h1>",
    }
  }
/>
`;

exports[`<Html/> should render html 2 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h1>test2</h1>",
    }
  }
/>
`;

exports[`<Html/> should render html 3 without data 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h1>test3</h1>",
    }
  }
/>
`;
